Font#Web - Fix z-index when tooltip is display

--- a/Web/assets/scss/global.scss
+++ b/Web/assets/scss/global.scss
@@ -271,7 +271,7 @@ a {
     overflow : hidden;
     span {
         position : relative;
-        z-index : 10;
+        z-index : 9;
     }
     &:after {
         content: '';
